<resources>
    <string name="app_name">Czas na lek</string>
    <string name="button_dodaj_lek">Dodaj lek</string>
    <string name="dodaj_lek">Dodaj lek</string>
    <string name="ev_podaj_nazw_leku">Podaj nazwę leku</string>
    <string name="tv_co_il_godzin_nalezy_przyjmowa_lek">Co ile godzin należy przyjmować lek ?</string>
    <string name="btn_dodaj">Dodaj lek</string>
    <string name="rozpocznij_odliczanie">Zażyj lek ponownie</string>
    <string name="end_curation">Zakończ kurację</string>
    <string name="lek_zosta_za_yty">Lek został zażyty</string>
    <string name="str_no_items">Brak leków do wyświetlenia</string>
    <string name="notif_message">Czas na zażycie leku</string>
    <string name="notif_title">Czas na lek</string>
    <string name="notif_long_message">Nie zapomnij o zażyciu kolejnej dawki leku. Już czas.</string>
    <string name="data_rozpocz_cia_kuracji">Data rozpoczęcia kuracji</string>
    <string name="wstrzymaj_kuracje">Wstrzymaj kurację</string>
</resources>
