<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbarDarkBlue">

    <ImageView
        android:id="@+id/iv_approve"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="@dimen/logo_marginTop"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_check"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@id/btn_close"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginTop="110dp"
        android:background="@null"
        android:src="@drawable/ic_close"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btn_restart"
        android:layout_toEndOf="@+id/btn_restart"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/tv_confirmation"
        android:layout_below="@id/iv_approve"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/btn_textSize"
        android:textColor="@color/btn_add_color"
        android:text="@string/lek_zosta_za_yty"
        />


    <Button
        android:id="@+id/btn_restart"
        android:background="@drawable/bg_btn_add_it"
        android:layout_width="@dimen/btn_emptyNoMedicine_width"
        android:layout_height="@dimen/btn_emptyNoMedicine_height"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_textSize"
        android:textColor="@color/btn_add_color"
        android:text="@string/rozpocznij_odliczanie"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="126dp"
        android:layout_below="@+id/iv_approve"
        android:layout_alignLeft="@+id/btn_pause"
        android:layout_alignStart="@+id/btn_pause" />

    <Button
        android:id="@+id/btn_pause"
        android:background="@drawable/bg_btn_add_it"
        android:layout_marginTop="20dp"
        android:layout_width="@dimen/btn_emptyNoMedicine_width"
        android:layout_height="@dimen/btn_emptyNoMedicine_height"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_textSize"
        android:textColor="@color/btn_add_color"
        android:text="@string/wstrzymaj_kuracje"
        android:fontFamily="sans-serif-light"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_restart" />


    <Button
        android:id="@+id/btn_completed"
        android:background="@drawable/bg_btn_add_it"
        android:layout_width="@dimen/btn_emptyNoMedicine_width"
        android:layout_height="@dimen/btn_emptyNoMedicine_height"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_textSize"
        android:textColor="@color/btn_add_color"
        android:text="@string/end_curation"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/btn_pause"
        android:layout_alignLeft="@+id/btn_pause"
        android:layout_alignStart="@+id/btn_pause"
        android:layout_marginTop="20dp" />

</RelativeLayout>